[gd_scene load_steps=14 format=2]

[ext_resource path="res://SCENE/MAIN.gd" type="Script" id=1]
[ext_resource path="res://others/SmallFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://IMAGENS_ICONES/full_logo.png" type="Texture" id=3]
[ext_resource path="res://IMAGENS_ICONES/Icon_Collection.png" type="Texture" id=4]
[ext_resource path="res://IMAGENS_ICONES/Icon_My_Decks.png" type="Texture" id=5]
[ext_resource path="res://IMAGENS_ICONES/Icon_Wishlist.png" type="Texture" id=6]
[ext_resource path="res://IMAGENS_ICONES/Icon_Tradable.png" type="Texture" id=7]
[ext_resource path="res://others/SIMPLIFICA Typeface.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Fonts/LOGO_B_TEXT.tres" type="DynamicFont" id=9]
[ext_resource path="res://IMAGENS_ICONES/Icon_Conf.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250, 75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 250, 25 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 8 )

[node name="MAIN" type="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 965.0 ]
}

[node name="LOGO" type="Sprite" parent="."]
position = Vector2( 709, 110 )
texture = ExtResource( 3 )

[node name="TXT1" type="RichTextLabel" parent="LOGO"]
margin_left = 68.0
margin_top = -54.0
margin_right = 322.0
margin_bottom = 14.0
custom_fonts/normal_font = ExtResource( 9 )
text = "Speed Duel"
scroll_active = false

[node name="TXT2" type="RichTextLabel" parent="LOGO"]
margin_left = 200.0
margin_right = 606.0
margin_bottom = 68.0
custom_fonts/normal_font = ExtResource( 9 )
text = "Deck Constructor"
scroll_active = false

[node name="B_Collection" type="TouchScreenButton" parent="."]
position = Vector2( 704.767, 238.615 )
shape = SubResource( 1 )

[node name="ICON" type="Sprite" parent="B_Collection"]
texture = ExtResource( 4 )
offset = Vector2( 80, 75 )

[node name="RichTextLabel" type="RichTextLabel" parent="B_Collection"]
margin_left = 142.0
margin_top = 39.0
margin_right = 501.0
margin_bottom = 125.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]Collection"
text = "Collection"
scroll_active = false

[node name="B_Decks" type="TouchScreenButton" parent="."]
position = Vector2( 704.767, 398.393 )
shape = SubResource( 1 )

[node name="ICON" type="Sprite" parent="B_Decks"]
texture = ExtResource( 5 )
offset = Vector2( 80, 75 )

[node name="RichTextLabel" type="RichTextLabel" parent="B_Decks"]
margin_left = 142.0
margin_top = 39.0
margin_right = 501.0
margin_bottom = 125.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]My Decks"
text = "My Decks"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Wishlist" type="TouchScreenButton" parent="."]
position = Vector2( 704.767, 561.185 )
shape = SubResource( 1 )

[node name="ICON" type="Sprite" parent="B_Wishlist"]
texture = ExtResource( 6 )
offset = Vector2( 80, 75 )

[node name="RichTextLabel" type="RichTextLabel" parent="B_Wishlist"]
margin_left = 142.0
margin_top = 39.0
margin_right = 501.0
margin_bottom = 125.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]WishList"
text = "WishList"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Tradable" type="TouchScreenButton" parent="."]
position = Vector2( 704.767, 721.336 )
shape = SubResource( 1 )

[node name="ICON" type="Sprite" parent="B_Tradable"]
texture = ExtResource( 7 )
offset = Vector2( 80, 75 )

[node name="RichTextLabel" type="RichTextLabel" parent="B_Tradable"]
margin_left = 142.0
margin_top = 39.0
margin_right = 501.0
margin_bottom = 125.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]Tradable"
text = "Tradable"
scroll_active = false

[node name="B_Conf" type="TouchScreenButton" parent="."]
position = Vector2( 704.767, 882.022 )
shape = SubResource( 1 )

[node name="ICON" type="Sprite" parent="B_Conf"]
position = Vector2( -5, 0 )
texture = ExtResource( 10 )
offset = Vector2( 80, 75 )

[node name="RichTextLabel" type="RichTextLabel" parent="B_Conf"]
margin_left = 142.0
margin_top = 39.0
margin_right = 501.0
margin_bottom = 125.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]Configurations"
text = "Configurations"
scroll_active = false

[node name="B_Log" type="TouchScreenButton" parent="."]
position = Vector2( 704, 1031.24 )
shape = SubResource( 2 )

[node name="V_TXT" type="RichTextLabel" parent="B_Log"]
margin_top = 15.0
margin_right = 499.0
margin_bottom = 48.0
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Touch here to acess update's log[/center]"
text = "Touch here to acess update's log"
scroll_active = false

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
